# invoice_payment_service

./: AI_USAGE.md  API.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: business.rs  customer.rs  invoice.rs  mock_payment.rs  mod.rs
backend/src/service/: business.rs  mod.rs
backend/tests/: payment_tests.rs
common/: Cargo.toml
common/src/: lib.rs  utils.rs
common/src/types/: db.rs  mod.rs  route.rs
common/types/: db.rs
db/: Cargo.toml
db/migrations/: 20260520130706_create_business.up.sql  20260520132855_create_business_keys.down.sql  20260520132855_create_business_keys.up.sql  20260520133301_create_business_customers.down.sql  20260520133301_create_business_customers.up.sql  20260520133907_create_business_webhook_endpoints.down.sql  20260520133907_create_business_webhook_endpoints.up.sql  20260520134141_create_invoices.down.sql  20260520134141_create_invoices.up.sql  20260520134842_create_payment_attempts.down.sql  20260520134842_create_payment_attempts.up.sql  20260520185942_create_invoice_line_items.down.sql  20260520185942_create_invoice_line_items.up.sql  20260521061504_create_psp_payemts.down.sql  20260521061504_create_psp_payemts.up.sql
db/src/: lib.rs
