[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}
common = {path = "../common"}
actix-web = "4.13.0"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "uuid"] }
sqlx-cli = "0.8.6"
tokio = { version = "1.52.3", features = ["full"] }
rand = "0.9.2"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
